<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="12dp"
        android:text="@string/xoa_mon_du_kien"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnHuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/huy"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnXoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnHuy"
        android:layout_alignBottom="@+id/btnHuy"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/xoa"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

</RelativeLayout>
