<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radGroup"
            android:layout_width="116dp"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/radBtnA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="A/A+"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/radBtnBplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="B+"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/radBtnB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="B"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/radBtnCplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="C+"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/radBtnC"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="C" />

            <RadioButton
                android:id="@+id/radBtnDplus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="D+"
                tools:ignore="HardcodedText" />

            <RadioButton
                android:id="@+id/radBtnD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="D" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/btnHuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:text="@string/huy"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtNhanXetCaiThien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:gravity="center"
                android:text="@string/chon_diem_muon_cai_thien"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="18sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/btnLuu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignTop="@+id/btnHuy"
                android:background="@color/common_google_signin_btn_text_dark_default"
                android:text="@string/luu"
                android:textColor="@android:color/holo_blue_dark"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imgNhanXet"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:srcCompat="@drawable/chondiemcaithien"
                android:layout_below="@+id/txtNhanXetCaiThien"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"></LinearLayout>
</LinearLayout>
